Improve MVC structure.

--- a/app/frontend/WatchToday/watch-today-modal.phtml
+++ b/app/frontend/WatchToday/watch-today-modal.phtml
@@ -1,9 +1,11 @@
 <?php
 /**
- * @var $movieDetails
- * @var $movieTimeSlots
- * @var $price
+ * @var $data
  */
+
+$movieDetails = $data[0];
+$movieTimeSlots = $data[1];
+$price = $data[2];
 ?>
 <?php if (isset($movieDetails['id'])) :?>
 <div class="watch-today-modal">
