--- a/app/frontend/WatchToday/watch-today-movies-list.phtml
+++ b/app/frontend/WatchToday/watch-today-movies-list.phtml
@@ -1,7 +1,8 @@
 <?php
 /**
- * @var $currentMovies
+ * @var $data
  */
+$currentMovies = $data[0];
 ?>
 <div class="watch-today-grid">
     <?php if (gettype($currentMovies) == 'array'): ?>
