--- a/app/frontend/Movies/movies-list.phtml
+++ b/app/frontend/Movies/movies-list.phtml
@@ -1,7 +1,9 @@
 <?php
 /**
- * @var $results - movies returned from database query
+ * @var $data - movies returned from database query
  */
+
+$results = $data[0];
 ?>
 
 <div class="main-movies-grid">
