--- a/app/frontend/WatchToday/select-seats.phtml
+++ b/app/frontend/WatchToday/select-seats.phtml
@@ -1,8 +1,8 @@
 <?php
 /**
- * @var $screenID
+ * @var $data
  */
-
+$screenID = $data[0];
 $letters = [1 => 'A', 2 => 'B' , 3 => 'C', 4 => 'D', 5 => 'E', 6 => 'F'];
 ?>
 <hr>
